Fixed Multi-language issue

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,97 +1,220 @@
 # Spanish messages
 # =========================
 
-# Navigation
-nav.dashboard=Panel
-nav.clients=Gestión de Clientes
-nav.home=Inicio
-nav.invoices=Facturas
-nav.resources=Recursos
-nav.projects=Proyectos
-nav.subscriptions=Suscripciones
+# ===========================================
+# Common / General
+# ===========================================
+app.name=Alpacode
+app.copyright=© 2025 Alpacode Studio. Todos los derechos reservados.
 
-# Header
-header.logout=Cerrar sesión
-header.user=Usuario
-
-# Language
+# ===========================================
+# Language Selector
+# ===========================================
 lang.select=Idioma
 lang.it=Italiano
 lang.en=English
 lang.es=Español
 
-# Common
+# ===========================================
+# Navigation
+# ===========================================
+nav.home=Inicio
+nav.dashboard=Panel
+nav.invoices=Facturas
+nav.resources=Recursos
+nav.projects=Proyectos
+nav.subscriptions=Suscripciones
+nav.clients=Gestión de Clientes
+nav.logout=Cerrar sesión
+
+# ===========================================
+# Dashboard
+# ===========================================
+dashboard.title=Panel
+dashboard.welcome=Bienvenido de nuevo,
+dashboard.stats.activeProjects=Proyectos Activos
+dashboard.stats.invoices=Facturas
+dashboard.stats.resources=Recursos
+dashboard.stats.subscription=Suscripción
+dashboard.stats.active=Activo
+dashboard.recentActivity=Actividad Reciente
+dashboard.recentActivity.empty=Sin actividad reciente
+dashboard.recentActivity.emptyDesc=Tus actividades recientes aparecerán aquí.
+dashboard.account.status=Estado de la Cuenta
+dashboard.account.active=Activo
+dashboard.account.role=Rol
+dashboard.account.email=Correo electrónico
+dashboard.account.memberSince=Miembro desde
+dashboard.quickActions=Acciones Rápidas
+dashboard.quickActions.documents=Mis Documentos
+dashboard.quickActions.documents.desc=Ver y gestionar tus archivos
+dashboard.quickActions.messages=Mensajes
+dashboard.quickActions.messages.desc=Contactar soporte
+dashboard.quickActions.settings=Configuración
+dashboard.quickActions.settings.desc=Gestionar tu perfil
+dashboard.projects=Tus Proyectos
+dashboard.projects.comingSoon=¡Próximamente!
+dashboard.projects.comingSoonDesc=Estamos trabajando para traerte una experiencia aún mejor. Tus proyectos y contenido aparecerán aquí.
+dashboard.features.projectManagement=Gestión de Proyectos
+dashboard.features.fileSharing=Compartir Archivos
+dashboard.features.activityTracking=Seguimiento de Actividad
+
+# ===========================================
+# Invoices
+# ===========================================
+invoices.title=Facturas
+invoices.subtitle=Ver y gestionar tus facturas
+invoices.stats.total=Total Facturas
+invoices.stats.paid=Pagadas
+invoices.stats.pending=Pendientes
+invoices.stats.overdue=Vencidas
+invoices.list=Lista de Facturas
+invoices.empty.description2=Aún no tienes facturas para ver. Tus facturas aparecerán aquí cuando estén disponibles.
+invoices.table.number=Número
+invoices.table.date=Fecha
+invoices.table.description=Descripción
+invoices.table.amount=Importe
+invoices.table.status=Estado
+invoices.table.actions=Acciones
+invoices.status.paid=Pagada
+invoices.status.pending=Pendiente
+invoices.status.overdue=Vencida
+invoices.download=Descargar PDF
+invoices.view=Ver
+invoices.filter.all=Todas
+invoices.filter.year=Año
+invoices.filter.status=Estado
+invoices.empty.title=Sin facturas
+invoices.empty.description=Aún no has recibido facturas.
+invoices.total=Total facturas
+invoices.totalAmount=Importe total
+
+# ===========================================
+# Resources
+# ===========================================
+resources.title=Recursos
+resources.subtitle=Accede a tus documentos y archivos compartidos
+resources.category.documents=Documentos
+resources.category.images=Imágenes
+resources.category.archives=Archivos
+resources.category.links=Enlaces Útiles
+resources.files=archivos
+resources.links=enlaces
+resources.allFiles=Todos los Archivos
+resources.empty.title=Sin recursos disponibles
+resources.empty.description=Aún no hay recursos compartidos contigo. Cuando estén disponibles, los encontrarás aquí.
+resources.wip.title=Sección en construcción
+resources.wip.description=Estamos trabajando para traerte recursos útiles. ¡Vuelve pronto!
+
+# ===========================================
+# Projects
+# ===========================================
+projects.title=Proyectos
+projects.subtitle=Gestiona y monitoriza tus proyectos
+projects.stats.total=Total Proyectos
+projects.stats.inProgress=En Curso
+projects.stats.completed=Completados
+projects.stats.paused=En Pausa
+projects.list=Tus Proyectos
+projects.empty.title=Sin proyectos activos
+projects.empty.description=Aún no tienes proyectos activos. Tus proyectos aparecerán aquí cuando comiencen.
+projects.features.progressTracking=Seguimiento de Progreso
+projects.features.timeline=Línea de Tiempo
+projects.features.documentation=Documentación
+projects.wip.title=Sección en construcción
+projects.wip.description=La gestión de proyectos estará disponible pronto.
+
+# ===========================================
+# Subscriptions
+# ===========================================
+subscriptions.title=Suscripciones
+subscriptions.subtitle=Gestiona tu plan y facturación
+subscriptions.status.active=Activo
+subscriptions.plan.standard=Plan Estándar
+subscriptions.plan.description=Acceso completo a todos los servicios básicos. Tu suscripción se renueva automáticamente.
+subscriptions.price.currency=EUR
+subscriptions.price.period=/mes
+subscriptions.nextRenewal=Próxima Renovación
+subscriptions.billingHistory=Historial de Pagos
+subscriptions.empty.title=Sin pagos registrados
+subscriptions.empty.description=Tu historial de pagos aparecerá aquí.
+subscriptions.wip.title=Sección en construcción
+subscriptions.wip.description=Gestiona tus suscripciones y planes. ¡Próximamente!
+
+# ===========================================
+# Admin - Clients
+# ===========================================
+admin.clients.title=Gestión de Clientes
+admin.clients.total=Total Clientes
+admin.clients.active=Activos
+admin.clients.pending=Pendientes
+admin.clients.disabled=Deshabilitados
+admin.clients.list=Lista de Clientes
+admin.clients.invite=Invitar Cliente
+admin.clients.invite.title=Invitar Nuevo Cliente
+admin.clients.invite.subtitle=Enviar una invitación por correo electrónico
+admin.clients.invite.send=Enviar Invitación
+admin.clients.invite.cancel=Cancelar
+admin.clients.invite.email=Correo electrónico
+admin.clients.invite.name=Nombre Completo
+admin.clients.invite.company=Nombre de la Empresa
+admin.clients.invite.company.optional=(opcional)
+admin.clients.invite.info=Se enviará un correo con un enlace de invitación. El enlace será válido por 48 horas.
+admin.clients.invite.success=Invitación enviada con éxito a {0}
+admin.clients.empty.title=Sin clientes
+admin.clients.empty.description=Aún no has invitado a ningún cliente. Comienza invitando a tu primer cliente usando el botón de arriba.
+admin.clients.empty.cta=Invita a tu primer cliente
+admin.clients.actions=Acciones
+admin.clients.actions.resend=Reenviar Invitación
+admin.clients.actions.disable=Deshabilitar
+admin.clients.actions.enable=Habilitar
+
+# ===========================================
+# Auth
+# ===========================================
+auth.login.title=Inicia sesión en tu cuenta
+auth.login.email=Correo electrónico
+auth.login.password=Contraseña
+auth.login.submit=Iniciar Sesión
+auth.login.error=Credenciales inválidas. Por favor, inténtalo de nuevo.
+auth.logout.success=Has cerrado sesión correctamente.
+auth.invite.setPassword=Establecer Contraseña
+auth.invite.welcome=Bienvenido,
+auth.invite.instructions=Establece una contraseña para activar tu cuenta.
+auth.invite.newPassword=Nueva Contraseña
+auth.invite.confirmPassword=Confirmar Contraseña
+auth.invite.activate=Activar Cuenta
+auth.invite.success=¡Cuenta activada con éxito! Ahora puedes iniciar sesión.
+auth.invite.invalid.title=Enlace No Válido
+auth.invite.invalid.description=El enlace de invitación que usaste no es válido o ha caducado.
+auth.invite.invalid.info=Los enlaces de invitación caducan después de 48 horas. Si necesitas una nueva invitación, contacta al administrador.
+
+# ===========================================
+# Common UI Elements
+# ===========================================
 common.loading=Cargando...
 common.save=Guardar
 common.cancel=Cancelar
 common.delete=Eliminar
 common.edit=Editar
 common.search=Buscar
-common.actions=Acciones
-common.status=Estado
-common.active=Activo
-common.pending=Pendiente
-common.disabled=Deshabilitado
+common.filter=Filtrar
+common.reset=Restablecer
+common.noResults=No se encontraron resultados
+common.comingSoon=Próximamente
+common.wip=En Progreso
 
-# Dashboard
-dashboard.title=Panel
-dashboard.welcome=Bienvenido de nuevo,
-dashboard.account.status=Estado de la Cuenta
-dashboard.role=Rol
-dashboard.email=Correo electrónico
-dashboard.member.since=Miembro desde
-dashboard.active.projects=Proyectos Activos
-dashboard.recent.activity=Actividad Reciente
-dashboard.no.activity=Sin actividad reciente
+# ===========================================
+# Dates & Times
+# ===========================================
+date.format=dd/MM/yyyy
+datetime.format=dd/MM/yyyy HH:mm
 
-# Invoices
-invoices.title=Facturas
-invoices.subtitle=Ver y gestionar tus facturas
-invoices.total=Total Facturas
-invoices.paid=Pagadas
-invoices.pending=Pendientes
-invoices.overdue=Vencidas
-invoices.list=Lista de Facturas
-invoices.empty=Sin facturas
-invoices.empty.desc=Aún no tienes facturas para ver.
-
-# Resources
-resources.title=Recursos
-resources.subtitle=Accede a tus documentos y archivos compartidos
-resources.documents=Documentos
-resources.images=Imágenes
-resources.archives=Archivos
-resources.links=Enlaces Útiles
-resources.all.files=Todos los Archivos
-resources.empty=Sin recursos disponibles
-resources.empty.desc=Aún no hay recursos compartidos contigo.
-resources.files=archivos
-
-# Projects
-projects.title=Proyectos
-projects.subtitle=Gestiona y monitoriza tus proyectos
-projects.total=Total Proyectos
-projects.in.progress=En Curso
-projects.completed=Completados
-projects.paused=En Pausa
-projects.list=Tus Proyectos
-projects.empty=Sin proyectos activos
-projects.empty.desc=Aún no tienes proyectos activos.
-projects.tracking=Seguimiento de Progreso
-projects.timeline=Línea de Tiempo
-projects.documentation=Documentación
-
-# Subscriptions
-subscriptions.title=Suscripciones
-subscriptions.subtitle=Gestiona tu plan y facturación
-subscriptions.current.plan=Plan Actual
-subscriptions.standard=Plan Estándar
-subscriptions.plan.desc=Acceso completo a todos los servicios básicos. Tu suscripción se renueva automáticamente.
-subscriptions.next.renewal=Próxima Renovación
-subscriptions.history=Historial de Pagos
-subscriptions.no.payments=Sin pagos registrados
-subscriptions.no.payments.desc=Tu historial de pagos aparecerá aquí.
-subscriptions.month=/mes
-
-# Footer
-footer.copyright=© 2025 Alpacode Studio. Todos los derechos reservados.
+# ===========================================
+# Validation
+# ===========================================
+validation.required=Este campo es obligatorio
+validation.email=Por favor, introduce una dirección de correo válida
+validation.minLength=Debe contener al menos {0} caracteres
+validation.maxLength=No puede exceder los {0} caracteres
+validation.passwordMatch=Las contraseñas no coinciden
